[gd_scene load_steps=20 format=2]

[ext_resource path="res://Font/ButtonFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/VersionFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameScenes/Menues/CharacterSelection.gd" type="Script" id=3]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Major/Armada.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Major/Alparko.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Major/Azul42.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONInfo.tscn" type="PackedScene" id=7]
[ext_resource path="res://Font/SmallFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Major/Chito.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Miscelaneous/Arrows/RightArrow.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Miscelaneous/Arrows/LeftArrow.png" type="Texture" id=11]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Minor/MarineraDeCantor.tscn" type="PackedScene" id=12]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Minor/CafeteraComunista.tscn" type="PackedScene" id=13]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Minor/Teclado.tscn" type="PackedScene" id=14]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Minor/FuncionDeWeierstrass.tscn" type="PackedScene" id=15]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Major/Paco.tscn" type="PackedScene" id=16]
[ext_resource path="res://GameScenes/Menues/Selection/PCEOMONES/Major/Karbajo.tscn" type="PackedScene" id=17]
[ext_resource path="res://Backgrounds/Pantalla_de_seleccion.png" type="Texture" id=18]
[ext_resource path="res://GameScenes/Menues/Selection/Locked.tscn" type="PackedScene" id=19]

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
texture = ExtResource( 18 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuDistribution" type="VBoxContainer" parent="CenterContainer"]
margin_left = 90.0
margin_top = 36.0
margin_right = 550.0
margin_bottom = 444.0
custom_constants/separation = 20

[node name="CharacterSelection" type="Label" parent="CenterContainer/MenuDistribution"]
margin_right = 460.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "¡Selecciona qué PCEOMONES quieres en tu equipo!"
align = 1

[node name="Major" type="VBoxContainer" parent="CenterContainer/MenuDistribution"]
margin_top = 37.0
margin_right = 460.0
margin_bottom = 222.0

[node name="MajorText" type="Label" parent="CenterContainer/MenuDistribution/Major"]
margin_right = 460.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
text = "Mayores"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectAndNavigate" type="HBoxContainer" parent="CenterContainer/MenuDistribution/Major"]
margin_top = 27.0
margin_right = 460.0
margin_bottom = 185.0
custom_constants/separation = 20
alignment = 1

[node name="Column1" type="VBoxContainer" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate"]
margin_left = 60.0
margin_right = 160.0
margin_bottom = 158.0

[node name="Armada" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column1" instance=ExtResource( 4 )]
margin_right = 100.0
margin_bottom = 77.0

[node name="Paco" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column1" instance=ExtResource( 16 )]
margin_top = 81.0
margin_right = 100.0
margin_bottom = 158.0

[node name="Locked" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column1" instance=ExtResource( 19 )]
visible = false
margin_top = 162.0
margin_right = 120.0
margin_bottom = 239.0
rect_rotation = 0.0

[node name="Locked2" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column1" instance=ExtResource( 19 )]
visible = false
margin_top = 162.0
margin_right = 120.0
margin_bottom = 239.0
rect_rotation = 0.0

[node name="Column2" type="VBoxContainer" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate"]
margin_left = 180.0
margin_right = 280.0
margin_bottom = 158.0

[node name="Alparko" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column2" instance=ExtResource( 5 )]
margin_right = 100.0
margin_bottom = 77.0

[node name="Azul42" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column2" instance=ExtResource( 6 )]
margin_top = 81.0
margin_right = 100.0
margin_bottom = 158.0

[node name="Locked" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column2" instance=ExtResource( 19 )]
visible = false
margin_top = 162.0
margin_right = 120.0
margin_bottom = 239.0
rect_rotation = 0.0

[node name="Locked2" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column2" instance=ExtResource( 19 )]
visible = false
margin_top = 162.0
margin_right = 120.0
margin_bottom = 239.0
rect_rotation = 0.0

[node name="Column3" type="VBoxContainer" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate"]
margin_left = 300.0
margin_right = 400.0
margin_bottom = 158.0

[node name="Chito" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column3" instance=ExtResource( 9 )]
margin_right = 100.0
margin_bottom = 77.0

[node name="Karbajo" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column3" instance=ExtResource( 17 )]
margin_top = 81.0
margin_right = 100.0
margin_bottom = 158.0

[node name="Locked" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column3" instance=ExtResource( 19 )]
visible = false
margin_top = 162.0
margin_right = 120.0
margin_bottom = 239.0
rect_rotation = 0.0

[node name="Locked2" parent="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column3" instance=ExtResource( 19 )]
visible = false
margin_top = 162.0
margin_right = 120.0
margin_bottom = 239.0
rect_rotation = 0.0

[node name="Minor" type="VBoxContainer" parent="CenterContainer/MenuDistribution"]
margin_top = 242.0
margin_right = 460.0
margin_bottom = 349.0

[node name="MinorText" type="Label" parent="CenterContainer/MenuDistribution/Minor"]
margin_right = 460.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
text = "Menores"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minors" type="HBoxContainer" parent="CenterContainer/MenuDistribution/Minor"]
margin_top = 27.0
margin_right = 460.0
margin_bottom = 107.0
rect_min_size = Vector2( 100, 80 )
custom_constants/separation = 20
alignment = 1

[node name="Teclado" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 14 )]
margin_right = 100.0

[node name="CafeteraComunista" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 13 )]
margin_left = 120.0
margin_right = 220.0

[node name="MarineraDeCantor" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 12 )]
margin_left = 240.0
margin_right = 340.0

[node name="FuncionDeWeierstrass" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 15 )]
margin_left = 360.0
margin_right = 460.0

[node name="PCEOMON" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 19 )]
visible = false
margin_left = 480.0
margin_right = 600.0
rect_rotation = 0.0

[node name="PCEOMON2" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 19 )]
visible = false
margin_left = 480.0
margin_right = 600.0
rect_rotation = 0.0

[node name="PCEOMON3" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 19 )]
visible = false
margin_left = 480.0
margin_right = 600.0
rect_rotation = 0.0

[node name="PCEOMON4" parent="CenterContainer/MenuDistribution/Minor/Minors" instance=ExtResource( 19 )]
visible = false
margin_left = 480.0
margin_right = 600.0
rect_rotation = 0.0

[node name="Miscelaneous" type="HBoxContainer" parent="CenterContainer/MenuDistribution"]
margin_top = 369.0
margin_right = 460.0
margin_bottom = 408.0
custom_constants/separation = 20
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/MenuDistribution/Miscelaneous"]
margin_left = 91.0
margin_right = 185.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 1 )
text = "Volver"

[node name="Start" type="Button" parent="CenterContainer/MenuDistribution/Miscelaneous"]
margin_left = 205.0
margin_right = 349.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 1 )
text = "Comenzar"

[node name="Party" type="Label" parent="CenterContainer/MenuDistribution/Miscelaneous"]
visible = false
margin_left = 402.0
margin_top = 11.0
margin_right = 446.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Equipo:"

[node name="Avatars" type="HBoxContainer" parent="CenterContainer/MenuDistribution/Miscelaneous"]
margin_left = 369.0
margin_right = 369.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PCEOMONInfo" parent="." instance=ExtResource( 7 )]
visible = false

[node name="MinorLeftArrow" type="TextureButton" parent="."]
margin_left = 15.0
margin_top = 309.944
margin_right = 60.0
margin_bottom = 389.944
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 11 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinorRightArrow" type="TextureButton" parent="."]
margin_left = 580.0
margin_top = 309.0
margin_right = 625.0
margin_bottom = 389.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 10 )
stretch_mode = 3

[node name="MajorLeftArrow" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 160.0
margin_right = 85.0
margin_bottom = 205.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 11 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MajorRightArrow" type="TextureButton" parent="."]
margin_left = 555.0
margin_top = 161.888
margin_right = 600.0
margin_bottom = 206.888
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 10 )
stretch_mode = 3

[connection signal="pressed" from="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column1/Armada" to="." method="_on_Armada_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column1/Paco" to="." method="_on_Paco_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column2/Alparko" to="." method="_on_Alparko_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column2/Azul42" to="." method="_on_Azul42_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column3/Chito" to="." method="_on_Chito_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Major/SelectAndNavigate/Column3/Karbajo" to="." method="_on_Karbajo_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Minor/Minors/Teclado" to="." method="_on_Teclado_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Minor/Minors/CafeteraComunista" to="." method="_on_CafeteraComunista_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Minor/Minors/MarineraDeCantor" to="." method="_on_MarineraDeCantor_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Minor/Minors/FuncionDeWeierstrass" to="." method="_on_FuncionDeWeierstrass_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Miscelaneous/Back" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/MenuDistribution/Miscelaneous/Start" to="." method="_on_Start_pressed"]
[connection signal="seleccionar" from="PCEOMONInfo" to="." method="_on_PCEOMONInfo_seleccionar"]
[connection signal="volver" from="PCEOMONInfo" to="." method="_on_PCEOMONInfo_volver"]
[connection signal="pressed" from="MinorLeftArrow" to="." method="_on_MinorLeftArrow_pressed"]
[connection signal="pressed" from="MinorRightArrow" to="." method="_on_MinorRightArrow_pressed"]
[connection signal="pressed" from="MajorLeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="MajorRightArrow" to="." method="_on_RightArrow_pressed"]
